force-app/main/default/objects/ETF__c/ETF__c.object-meta.xml
<CustomObject>
    <description>An Exchange Traded Fund (ETF) is a market linked investment that tracks a specific index, sector, commodity, or asset class. For example, an ETF tracking the Nifty 50 will invest in the same 50 companies in the same proportion as the index.</description>
    <label>Exchange Traded Fund</label>
    <nameField>
        <label>ETF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Traded Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>