force-app/main/default/objects/ETF__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <inlineHelpText>Represents the percentage of the total investment amount allocated to this ETF.</inlineHelpText>
    <label>Allocation (%)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>