force-app/main/default/objects/ETF__c/fields/Scheme_Details__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Details__c</fullName>
    <label>Scheme Details</label>
    <type>Url</type>
</CustomField>