force-app/main/default/objects/ETF__c/fields/Stock_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange__c</fullName>
    <description>A stock exchange is a marketplace where stockbrokers and traders can buy and sell securities, such as shares of stock, bonds and other financial instruments.</description>
    <label>Stock Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bombay Stock Exchange (BSE)</fullName>
            </value>
            <value>
                <fullName>National Stock Exchange of India (NSE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>