force-app/main/default/objects/ETF__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <inlineHelpText>It is a unique series of letters or numbers used to identify publicly traded shares of a company on a stock exchange.</inlineHelpText>
    <label>Ticker Symbol</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>