force-app/main/default/objects/ETF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticker_Symbol__c</columns>
    <columns>Market__c</columns>
    <columns>Stock_Exchange__c</columns>
    <columns>Allocation__c</columns>
    <columns>Scheme_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>